actualizacion de combo boxes con respecto a flights e intento a implementar la logica de delay flight

--- a/src/view/AirportFrame.form
+++ b/src/view/AirportFrame.form
@@ -2263,7 +2263,7 @@
                                   <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="delayFlightHour" pref="105" max="32767" attributes="0"/>
-                                      <Component id="delayFlightID" max="32767" attributes="0"/>
+                                      <Component id="delayFlightIDComboBox" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -2282,7 +2282,7 @@
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel47" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="delayFlightID" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="delayFlightIDComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -2333,7 +2333,7 @@
                     <Property name="text" type="java.lang.String" value="ID:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JComboBox" name="delayFlightID">
+                <Component class="javax.swing.JComboBox" name="delayFlightIDComboBox">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Yu Gothic UI" size="18" style="0"/>
