--- a/src/view/AirportFrame.form
+++ b/src/view/AirportFrame.form
@@ -1646,9 +1646,11 @@
               <SubComponents>
                 <Component class="javax.swing.JTextField" name="addToFlightID">
                   <Properties>
+                    <Property name="editable" type="boolean" value="false"/>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Yu Gothic UI" size="18" style="0"/>
                     </Property>
+                    <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel44">
